--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">✨ Smart Life Organizer</string>
+    <string name="app_name">✨ LO - Life Organizer</string>
     <string name="action_settings">Settings</string>
     
     <!-- Main Navigation -->
@@ -7,10 +7,11 @@
     <string name="nav_tasks">✅ Tasks</string>
     <string name="nav_habits">⭐ Habits</string>
     <string name="nav_goals">🎯 Goals</string>
+    <string name="nav_graphs">📊 Graphs</string>
     <string name="nav_profile">👤 You</string>
     
     <!-- Dashboard -->
-    <string name="dashboard_title">Welcome to Your Amazing Journey! 🌟</string>
+    <string name="dashboard_title">Welcome to LO! 🌟</string>
     <string name="today_tasks">Today\'s Adventures</string>
     <string name="habit_streak">Winning Streak</string>
     <string name="goal_progress">Dream Progress</string>
@@ -18,6 +19,13 @@
     <string name="add_task">Add Task</string>
     <string name="add_habit">Add Habit</string>
     <string name="add_goal">Add Goal</string>
+    
+    <!-- Graphs -->
+    <string name="graphs_title">Your Insights</string>
+    <string name="graphs_choose">Choose a chart type</string>
+    <string name="chart_pie">Pie Chart</string>
+    <string name="chart_bar">Bar Chart</string>
+    <string name="chart_line">Line Chart</string>
     
     <!-- Tasks -->
     <string name="tasks_title">Tasks</string>
@@ -48,7 +56,6 @@
     <string name="save_habit">Save Habit</string>
     <string name="delete_habit">Delete</string>
     <string name="track_habit">Track</string>
-    <string name="current_streak">Current Streak: %d days</string>
     
     <!-- Goals -->
     <string name="goals_title">Life Goals</string>
@@ -104,6 +111,9 @@
     <string name="no_tasks">Your adventure awaits! 🎯 Add your first task to begin the journey!</string>
     <string name="no_habits">Ready to build amazing habits? 🌱 Let\'s start your transformation!</string>
     <string name="no_goals">Dream big, start small! 🌠 What incredible goal will you achieve?</string>
+    <string name="tasks_empty_state_icon">Tasks empty state illustration</string>
+    <string name="habits_empty_state_icon">Habits empty state illustration</string>
+    <string name="goals_empty_state_icon">Goals empty state illustration</string>
     
     <!-- Encouraging Action Labels -->
     <string name="add_task_encouraging">Create Your Next Adventure! ➕</string>
@@ -117,4 +127,11 @@
     <string name="habit_reminder_text">Time to track your habit: %s</string>
     <string name="goal_reminder">Goal Reminder</string>
     <string name="goal_reminder_text">Don\'t forget to work on your goal: %s</string>
+    
+    <!-- Plurals -->
+    <plurals name="current_streak_days">
+        <item quantity="zero">Current Streak: %d days</item>
+        <item quantity="one">Current Streak: %d day</item>
+        <item quantity="other">Current Streak: %d days</item>
+    </plurals>
 </resources>
