--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">✨ LO - Life Organizer</string>
+    <string name="app_name">LO - Life Organizer</string>
     <string name="action_settings">Settings</string>
     
     <!-- Main Navigation -->
@@ -8,14 +8,13 @@
     <string name="nav_habits">⭐ Habits</string>
     <string name="nav_goals">🎯 Goals</string>
     <string name="nav_graphs">📊 Graphs</string>
-    <string name="nav_profile">👤 You</string>
     
     <!-- Dashboard -->
-    <string name="dashboard_title">Welcome to LO! 🌟</string>
-    <string name="today_tasks">Today\'s Adventures</string>
-    <string name="habit_streak">Winning Streak</string>
-    <string name="goal_progress">Dream Progress</string>
-    <string name="daily_mood">How are you shining today? ☀️</string>
+    <string name="dashboard_title">Welcome to LO! 🚀</string>
+    <string name="today_tasks">Today\'s Mission</string>
+    <string name="habit_streak">Streak Power</string>
+    <string name="goal_progress">Dream Status</string>
+    <string name="daily_mood">What\'s your vibe today? ✨</string>
     <string name="add_task">Add Task</string>
     <string name="add_habit">Add Habit</string>
     <string name="add_goal">Add Goal</string>
@@ -67,27 +66,6 @@
     <string name="delete_goal">Delete</string>
     <string name="update_progress">Update Progress</string>
     
-    <!-- Profile -->
-    <string name="profile_title">Profile</string>
-    <string name="export_data">Export Data</string>
-    <string name="clear_data">Clear All Data</string>
-    <string name="about">About</string>
-    <string name="join_date">Join Date</string>
-    <string name="current_mood">Current Mood</string>
-    <string name="mood_date">Mood Date</string>
-    <string name="total_tasks">Total Tasks</string>
-    <string name="completed_tasks">Completed Tasks</string>
-    <string name="completion_rate">Completion Rate</string>
-    <string name="total_habits">Total Habits</string>
-    <string name="average_streak">Average Streak</string>
-    <string name="total_goals">Total Goals</string>
-    <string name="average_progress">Average Progress</string>
-    <string name="settings">Settings</string>
-    <string name="tasks">Tasks</string>
-    <string name="habits">Habits</string>
-    <string name="goals">Goals</string>
-    <string name="active">active</string>
-    <string name="days">days</string>
     <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
     
     <!-- Common -->
